test/org/midica/testfiles/failing/var-in-instruments.midica
INCLUDE inc/instruments.midica

VAR $ch  = 5

INSTRUMENTS
	$ch 60 test
END


